--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "Laravel", "LaravelSurveyJs", "surveyjs", "survey manager", "laravel survey", "survey editor", "surveyjs builder", "hasnainali9"
     ],
      "require": {
-        "php": "^7.2",
+        "php": "^7.2|^8.0",
         "cviebrock/eloquent-sluggable": "*",
         "illuminate/database": "*",
         "ext-json": "*"
